jsonschemadsl2ecore.trafo.opt/test/test103/validtests/example9.test103
{
	"prop1prop2":"both not"
}