jsonschemadsl2ecore.trafo.opt/test/test103/invalidtests/example6.test103
{
	
	"prop1":"aaaaaaaaaaaa",
	"prop2":3
}                 